tests/data/placebo/test_vpc_by_security_group/ec2.DescribeSecurityGroups_2.json
{
    "status_code": 200, 
    "data": {
        "SecurityGroups": [
            {
                "IpPermissionsEgress": [
                    {
                        "IpProtocol": "-1", 
                        "PrefixListIds": [], 
                        "IpRanges": [
                            {
                                "CidrIp": "0.0.0.0/0"
                            }
                        ], 
                        "UserIdGroupPairs": [], 
                        "Ipv6Ranges": []
                    }
                ], 
                "Description": "launch-wizard-4 created 2017-01-27T23:55:02.403-05:00", 
                "IpPermissions": [
                    {
                        "PrefixListIds": [], 
                        "FromPort": 22, 
                        "IpRanges": [
                            {
                                "CidrIp": "0.0.0.0/0"
                            }
                        ], 
                        "ToPort": 22, 
                        "IpProtocol": "tcp", 
                        "UserIdGroupPairs": [], 
                        "Ipv6Ranges": []
                    }
                ], 
                "GroupName": "launch-wizard-4", 
                "VpcId": "vpc-d2d616b5", 
                "OwnerId": "644160558196", 
                "GroupId": "sg-0026997c"
            }, 
            {
                "IpPermissionsEgress": [
                    {
                        "IpProtocol": "-1", 
                        "PrefixListIds": [], 
                        "IpRanges": [
                            {
                                "CidrIp": "0.0.0.0/0"
                            }
                        ], 
                        "UserIdGroupPairs": [], 
                        "Ipv6Ranges": []
                    }
                ], 
                "Description": "Created from the RDS Management Console", 
                "IpPermissions": [
                    {
                        "PrefixListIds": [], 
                        "FromPort": 3306, 
                        "IpRanges": [
                            {
                                "CidrIp": "172.14.148.19/32"
                            }
                        ], 
                        "ToPort": 3306, 
                        "IpProtocol": "tcp", 
                        "UserIdGroupPairs": [], 
                        "Ipv6Ranges": []
                    }
                ], 
                "GroupName": "rds-launch-wizard-4", 
                "VpcId": "vpc-d2d616b5", 
                "OwnerId": "644160558196", 
                "GroupId": "sg-0379fd7c"
            }, 
            {
                "IpPermissionsEgress": [
                    {
                        "IpProtocol": "-1", 
                        "PrefixListIds": [], 
                        "IpRanges": [
                            {
                                "CidrIp": "0.0.0.0/0"
                            }
                        ], 
                        "UserIdGroupPairs": [], 
                        "Ipv6Ranges": []
                    }
                ], 
                "Description": "AutoScaling-Security-Group-1 (2017-02-25 00:13:20.344-05:00)", 
                "IpPermissions": [
                    {
                        "PrefixListIds": [], 
                        "FromPort": 22, 
                        "IpRanges": [
                            {
                                "CidrIp": "0.0.0.0/0"
                            }
                        ], 
                        "ToPort": 22, 
                        "IpProtocol": "tcp", 
                        "UserIdGroupPairs": [], 
                        "Ipv6Ranges": []
                    }
                ], 
                "GroupName": "AutoScaling-Security-Group-1", 
                "VpcId": "vpc-d2d616b5", 
                "OwnerId": "644160558196", 
                "GroupId": "sg-0b3d3377"
            }, 
            {
                "IpPermissionsEgress": [
                    {
                        "IpProtocol": "-1", 
                        "PrefixListIds": [], 
                        "IpRanges": [
                            {
                                "CidrIp": "0.0.0.0/0"
                            }
                        ], 
                        "UserIdGroupPairs": [], 
                        "Ipv6Ranges": []
                    }
                ], 
                "Description": "DeleteMeWhenWeAreDone", 
                "Tags": [
                    {
                        "Value": "tagdeletevalue", 
                        "Key": "tagdeletekey"
                    }
                ], 
                "IpPermissions": [], 
                "GroupName": "Test-SG4", 
                "VpcId": "vpc-d2d616b5", 
                "OwnerId": "644160558196", 
                "GroupId": "sg-2c4a6551"
            }, 
            {
                "IpPermissionsEgress": [
                    {
                        "IpProtocol": "-1", 
                        "PrefixListIds": [], 
                        "IpRanges": [
                            {
                                "CidrIp": "0.0.0.0/0"
                            }
                        ], 
                        "UserIdGroupPairs": [], 
                        "Ipv6Ranges": []
                    }
                ], 
                "Description": "Created from the RDS Management Console", 
                "IpPermissions": [
                    {
                        "PrefixListIds": [], 
                        "FromPort": 3306, 
                        "IpRanges": [
                            {
                                "CidrIp": "204.63.44.142/32"
                            }
                        ], 
                        "ToPort": 3306, 
                        "IpProtocol": "tcp", 
                        "UserIdGroupPairs": [], 
                        "Ipv6Ranges": []
                    }
                ], 
                "GroupName": "rds-launch-wizard-1", 
                "VpcId": "vpc-d2d616b5", 
                "OwnerId": "644160558196", 
                "GroupId": "sg-314baa4c"
            }, 
            {
                "IpPermissionsEgress": [
                    {
                        "IpProtocol": "-1", 
                        "PrefixListIds": [], 
                        "IpRanges": [
                            {
                                "CidrIp": "0.0.0.0/0"
                            }
                        ], 
                        "UserIdGroupPairs": [], 
                        "Ipv6Ranges": []
                    }
                ], 
                "Description": "launch-wizard-9 created 2017-03-10T19:27:31.332-05:00", 
                "IpPermissions": [
                    {
                        "PrefixListIds": [], 
                        "FromPort": 22, 
                        "IpRanges": [
                            {
                                "CidrIp": "0.0.0.0/0"
                            }
                        ], 
                        "ToPort": 22, 
                        "IpProtocol": "tcp", 
                        "UserIdGroupPairs": [], 
                        "Ipv6Ranges": []
                    }
                ], 
                "GroupName": "launch-wizard-9", 
                "VpcId": "vpc-d2d616b5", 
                "OwnerId": "644160558196", 
                "GroupId": "sg-3d78bc42"
            }, 
            {
                "IpPermissionsEgress": [
                    {
                        "IpProtocol": "-1", 
                        "PrefixListIds": [], 
                        "IpRanges": [
                            {
                                "CidrIp": "0.0.0.0/0"
                            }
                        ], 
                        "UserIdGroupPairs": [], 
                        "Ipv6Ranges": []
                    }
                ], 
                "Description": "Created from the RDS Management Console", 
                "IpPermissions": [
                    {
                        "PrefixListIds": [], 
                        "FromPort": 5432, 
                        "IpRanges": [
                            {
                                "CidrIp": "209.43.102.90/32"
                            }
                        ], 
                        "ToPort": 5432, 
                        "IpProtocol": "tcp", 
                        "UserIdGroupPairs": [], 
                        "Ipv6Ranges": []
                    }
                ], 
                "GroupName": "rds-launch-wizard-7", 
                "VpcId": "vpc-d2d616b5", 
                "OwnerId": "644160558196", 
                "GroupId": "sg-3e9ef441"
            }, 
            {
                "IpPermissionsEgress": [
                    {
                        "IpProtocol": "-1", 
                        "PrefixListIds": [], 
                        "IpRanges": [
                            {
                                "CidrIp": "0.0.0.0/0"
                            }
                        ], 
                        "UserIdGroupPairs": [], 
                        "Ipv6Ranges": []
                    }
                ], 
                "Description": "SG created to test EC2 Security Group Filters", 
                "IpPermissions": [
                    {
                        "PrefixListIds": [], 
                        "FromPort": 22, 
                        "IpRanges": [
                            {
                                "CidrIp": "204.63.44.148/32"
                            }
                        ], 
                        "ToPort": 22, 
                        "IpProtocol": "tcp", 
                        "UserIdGroupPairs": [], 
                        "Ipv6Ranges": []
                    }
                ], 
                "GroupName": "TEST-PROD-ONLY-SG", 
                "VpcId": "vpc-d2d616b5", 
                "OwnerId": "644160558196", 
                "GroupId": "sg-411b413c"
            }, 
            {
                "IpPermissionsEgress": [
                    {
                        "IpProtocol": "-1", 
                        "PrefixListIds": [], 
                        "IpRanges": [
                            {
                                "CidrIp": "0.0.0.0/0"
                            }
                        ], 
                        "UserIdGroupPairs": [], 
                        "Ipv6Ranges": []
                    }
                ], 
                "Description": "DeleteMeWhenWeAreDone", 
                "Tags": [
                    {
                        "Value": "tagdeletevalue", 
                        "Key": "tagdeletekey"
                    }
                ], 
                "IpPermissions": [], 
                "GroupName": "Test-SG3", 
                "VpcId": "vpc-d2d616b5", 
                "OwnerId": "644160558196", 
                "GroupId": "sg-424a653f"
            }, 
            {
                "IpPermissionsEgress": [
                    {
                        "IpProtocol": "-1", 
                        "PrefixListIds": [], 
                        "IpRanges": [
                            {
                                "CidrIp": "0.0.0.0/0"
                            }
                        ], 
                        "UserIdGroupPairs": [], 
                        "Ipv6Ranges": []
                    }
                ], 
                "Description": "launch-wizard-5 created 2017-02-23T23:09:58.392-05:00", 
                "IpPermissions": [
                    {
                        "PrefixListIds": [], 
                        "FromPort": 22, 
                        "IpRanges": [
                            {
                                "CidrIp": "0.0.0.0/0"
                            }
                        ], 
                        "ToPort": 22, 
                        "IpProtocol": "tcp", 
                        "UserIdGroupPairs": [], 
                        "Ipv6Ranges": []
                    }
                ], 
                "GroupName": "launch-wizard-5", 
                "VpcId": "vpc-d2d616b5", 
                "OwnerId": "644160558196", 
                "GroupId": "sg-45131239"
            }, 
            {
                "IpPermissionsEgress": [
                    {
                        "IpProtocol": "-1", 
                        "PrefixListIds": [], 
                        "IpRanges": [
                            {
                                "CidrIp": "0.0.0.0/0"
                            }
                        ], 
                        "UserIdGroupPairs": [], 
                        "Ipv6Ranges": []
                    }
                ], 
                "Description": "default VPC security group", 
                "IpPermissions": [
                    {
                        "IpProtocol": "-1", 
                        "PrefixListIds": [], 
                        "IpRanges": [], 
                        "UserIdGroupPairs": [
                            {
                                "UserId": "644160558196", 
                                "GroupId": "sg-4b9ada34"
                            }
                        ], 
                        "Ipv6Ranges": []
                    }
                ], 
                "GroupName": "default", 
                "VpcId": "vpc-f1516b97", 
                "OwnerId": "644160558196", 
                "GroupId": "sg-4b9ada34"
            }, 
            {
                "IpPermissionsEgress": [
                    {
                        "IpProtocol": "-1", 
                        "PrefixListIds": [], 
                        "IpRanges": [
                            {
                                "CidrIp": "0.0.0.0/0"
                            }
                        ], 
                        "UserIdGroupPairs": [], 
                        "Ipv6Ranges": []
                    }
                ], 
                "Description": "launch-wizard-11 created 2017-03-25T10:57:13.203-04:00", 
                "IpPermissions": [
                    {
                        "PrefixListIds": [], 
                        "FromPort": 22, 
                        "IpRanges": [
                            {
                                "CidrIp": "0.0.0.0/0"
                            }
                        ], 
                        "ToPort": 22, 
                        "IpProtocol": "tcp", 
                        "UserIdGroupPairs": [], 
                        "Ipv6Ranges": []
                    }
                ], 
                "GroupName": "launch-wizard-11", 
                "VpcId": "vpc-d2d616b5", 
                "OwnerId": "644160558196", 
                "GroupId": "sg-5be15a24"
            }, 
            {
                "IpPermissionsEgress": [
                    {
                        "IpProtocol": "-1", 
                        "PrefixListIds": [], 
                        "IpRanges": [
                            {
                                "CidrIp": "0.0.0.0/0"
                            }
                        ], 
                        "UserIdGroupPairs": [], 
                        "Ipv6Ranges": []
                    }
                ], 
                "Description": "DeleteMeWhenWeAreDone", 
                "Tags": [
                    {
                        "Value": "tagdeletevalue", 
                        "Key": "tagdeletekey"
                    }
                ], 
                "IpPermissions": [], 
                "GroupName": "Test-SG2", 
                "VpcId": "vpc-d2d616b5", 
                "OwnerId": "644160558196", 
                "GroupId": "sg-5d4a6520"
            }, 
            {
                "IpPermissionsEgress": [
                    {
                        "IpProtocol": "-1", 
                        "PrefixListIds": [], 
                        "IpRanges": [
                            {
                                "CidrIp": "0.0.0.0/0"
                            }
                        ], 
                        "UserIdGroupPairs": [], 
                        "Ipv6Ranges": []
                    }
                ], 
                "Description": "launch-wizard-16 created 2017-06-05T16:32:02.874-04:00", 
                "IpPermissions": [
                    {
                        "PrefixListIds": [], 
                        "FromPort": 22, 
                        "IpRanges": [
                            {
                                "CidrIp": "0.0.0.0/0"
                            }
                        ], 
                        "ToPort": 22, 
                        "IpProtocol": "tcp", 
                        "UserIdGroupPairs": [], 
                        "Ipv6Ranges": []
                    }
                ], 
                "GroupName": "launch-wizard-16", 
                "VpcId": "vpc-d2d616b5", 
                "OwnerId": "644160558196", 
                "GroupId": "sg-5fd5dd21"
            }, 
            {
                "IpPermissionsEgress": [
                    {
                        "IpProtocol": "-1", 
                        "PrefixListIds": [], 
                        "IpRanges": [
                            {
                                "CidrIp": "0.0.0.0/0"
                            }
                        ], 
                        "UserIdGroupPairs": [], 
                        "Ipv6Ranges": []
                    }
                ], 
                "Description": "launch-wizard-3 created 2017-01-27T23:54:38.789-05:00", 
                "IpPermissions": [
                    {
                        "PrefixListIds": [], 
                        "FromPort": 22, 
                        "IpRanges": [
                            {
                                "CidrIp": "0.0.0.0/0"
                            }
                        ], 
                        "ToPort": 22, 
                        "IpProtocol": "tcp", 
                        "UserIdGroupPairs": [], 
                        "Ipv6Ranges": []
                    }
                ], 
                "GroupName": "launch-wizard-3", 
                "VpcId": "vpc-d2d616b5", 
                "OwnerId": "644160558196", 
                "GroupId": "sg-6c269910"
            }, 
            {
                "IpPermissionsEgress": [
                    {
                        "IpProtocol": "-1", 
                        "PrefixListIds": [], 
                        "IpRanges": [
                            {
                                "CidrIp": "0.0.0.0/0"
                            }
                        ], 
                        "UserIdGroupPairs": [], 
                        "Ipv6Ranges": []
                    }
                ], 
                "Description": "default VPC security group", 
                "IpPermissions": [
                    {
                        "IpProtocol": "-1", 
                        "PrefixListIds": [], 
                        "IpRanges": [
                            {
                                "CidrIp": "108.56.181.242/32"
                            }
                        ], 
                        "UserIdGroupPairs": [
                            {
                                "UserId": "644160558196", 
                                "GroupId": "sg-6c7fa917"
                            }
                        ], 
                        "Ipv6Ranges": []
                    }
                ], 
                "GroupName": "default", 
                "VpcId": "vpc-d2d616b5", 
                "OwnerId": "644160558196", 
                "GroupId": "sg-6c7fa917"
            }, 
            {
                "IpPermissionsEgress": [
                    {
                        "IpProtocol": "-1", 
                        "PrefixListIds": [], 
                        "IpRanges": [
                            {
                                "CidrIp": "0.0.0.0/0"
                            }
                        ], 
                        "UserIdGroupPairs": [], 
                        "Ipv6Ranges": []
                    }
                ], 
                "Description": "Created from the RDS Management Console", 
                "Tags": [
                    {
                        "Value": "Duper", 
                        "Key": "Super"
                    }
                ], 
                "IpPermissions": [
                    {
                        "PrefixListIds": [], 
                        "FromPort": 3306, 
                        "IpRanges": [
                            {
                                "CidrIp": "199.244.214.109/32"
                            }
                        ], 
                        "ToPort": 3306, 
                        "IpProtocol": "tcp", 
                        "UserIdGroupPairs": [], 
                        "Ipv6Ranges": []
                    }
                ], 
                "GroupName": "rds-launch-wizard-2", 
                "VpcId": "vpc-d2d616b5", 
                "OwnerId": "644160558196", 
                "GroupId": "sg-704f840d"
            }, 
            {
                "IpPermissionsEgress": [
                    {
                        "IpProtocol": "-1", 
                        "PrefixListIds": [], 
                        "IpRanges": [
                            {
                                "CidrIp": "0.0.0.0/0"
                            }
                        ], 
                        "UserIdGroupPairs": [], 
                        "Ipv6Ranges": []
                    }
                ], 
                "Description": "launch-wizard-7 created 2017-02-24T05:14:07.534-05:00", 
                "IpPermissions": [
                    {
                        "PrefixListIds": [], 
                        "FromPort": 22, 
                        "IpRanges": [
                            {
                                "CidrIp": "0.0.0.0/0"
                            }
                        ], 
                        "ToPort": 22, 
                        "IpProtocol": "tcp", 
                        "UserIdGroupPairs": [], 
                        "Ipv6Ranges": []
                    }
                ], 
                "GroupName": "launch-wizard-7", 
                "VpcId": "vpc-d2d616b5", 
                "OwnerId": "644160558196", 
                "GroupId": "sg-854645f9"
            }, 
            {
                "IpPermissionsEgress": [
                    {
                        "IpProtocol": "-1", 
                        "PrefixListIds": [], 
                        "IpRanges": [
                            {
                                "CidrIp": "0.0.0.0/0"
                            }
                        ], 
                        "UserIdGroupPairs": [], 
                        "Ipv6Ranges": []
                    }
                ], 
                "Description": "DeleteMeWhenWeAreDone", 
                "Tags": [
                    {
                        "Value": "tagdeletevalue", 
                        "Key": "tagdeletekey"
                    }
                ], 
                "IpPermissions": [], 
                "GroupName": "Test-SG8", 
                "VpcId": "vpc-d2d616b5", 
                "OwnerId": "644160558196", 
                "GroupId": "sg-854a65f8"
            }, 
            {
                "IpPermissionsEgress": [
                    {
                        "IpProtocol": "-1", 
                        "PrefixListIds": [], 
                        "IpRanges": [
                            {
                                "CidrIp": "0.0.0.0/0"
                            }
                        ], 
                        "UserIdGroupPairs": [], 
                        "Ipv6Ranges": []
                    }
                ], 
                "Description": "launch-wizard-13 created 2017-03-26T10:54:12.841-04:00", 
                "IpPermissions": [
                    {
                        "PrefixListIds": [], 
                        "FromPort": 22, 
                        "IpRanges": [
                            {
                                "CidrIp": "0.0.0.0/0"
                            }
                        ], 
                        "ToPort": 22, 
                        "IpProtocol": "tcp", 
                        "UserIdGroupPairs": [], 
                        "Ipv6Ranges": []
                    }
                ], 
                "GroupName": "launch-wizard-13", 
                "VpcId": "vpc-d2d616b5", 
                "OwnerId": "644160558196", 
                "GroupId": "sg-8735b1f8"
            }, 
            {
                "IpPermissionsEgress": [
                    {
                        "IpProtocol": "-1", 
                        "PrefixListIds": [], 
                        "IpRanges": [
                            {
                                "CidrIp": "0.0.0.0/0"
                            }
                        ], 
                        "UserIdGroupPairs": [], 
                        "Ipv6Ranges": []
                    }
                ], 
                "Description": "DeleteMeWhenWeAreDone", 
                "Tags": [
                    {
                        "Value": "tagdeletevalue", 
                        "Key": "tagdeletekey"
                    }
                ], 
                "IpPermissions": [
                    {
                        "PrefixListIds": [], 
                        "FromPort": 0, 
                        "IpRanges": [
                            {
                                "CidrIp": "0.0.0.0/0"
                            }
                        ], 
                        "ToPort": 65535, 
                        "IpProtocol": "tcp", 
                        "UserIdGroupPairs": [], 
                        "Ipv6Ranges": []
                    }
                ], 
                "GroupName": "Test-SG1", 
                "VpcId": "vpc-d2d616b5", 
                "OwnerId": "644160558196", 
                "GroupId": "sg-8a4b64f7"
            }, 
            {
                "IpPermissionsEgress": [
                    {
                        "IpProtocol": "-1", 
                        "PrefixListIds": [], 
                        "IpRanges": [
                            {
                                "CidrIp": "0.0.0.0/0"
                            }
                        ], 
                        "UserIdGroupPairs": [], 
                        "Ipv6Ranges": []
                    }
                ], 
                "Description": "Created from the RDS Management Console", 
                "IpPermissions": [
                    {
                        "PrefixListIds": [], 
                        "FromPort": 5432, 
                        "IpRanges": [
                            {
                                "CidrIp": "209.43.102.90/32"
                            }
                        ], 
                        "ToPort": 5432, 
                        "IpProtocol": "tcp", 
                        "UserIdGroupPairs": [], 
                        "Ipv6Ranges": []
                    }
                ], 
                "GroupName": "rds-launch-wizard-6", 
                "VpcId": "vpc-d2d616b5", 
                "OwnerId": "644160558196", 
                "GroupId": "sg-8c84eef3"
            }, 
            {
                "IpPermissionsEgress": [
                    {
                        "IpProtocol": "-1", 
                        "PrefixListIds": [], 
                        "IpRanges": [
                            {
                                "CidrIp": "0.0.0.0/0"
                            }
                        ], 
                        "UserIdGroupPairs": [], 
                        "Ipv6Ranges": []
                    }
                ], 
                "Description": "launch-wizard-1 created 2016-10-11T08:37:50.939-04:00", 
                "IpPermissions": [
                    {
                        "PrefixListIds": [], 
                        "FromPort": 22, 
                        "IpRanges": [
                            {
                                "CidrIp": "0.0.0.0/0"
                            }
                        ], 
                        "ToPort": 22, 
                        "IpProtocol": "tcp", 
                        "UserIdGroupPairs": [], 
                        "Ipv6Ranges": []
                    }
                ], 
                "GroupName": "launch-wizard-1", 
                "VpcId": "vpc-d2d616b5", 
                "OwnerId": "644160558196", 
                "GroupId": "sg-926a56e8"
            }, 
            {
                "IpPermissionsEgress": [
                    {
                        "IpProtocol": "-1", 
                        "PrefixListIds": [], 
                        "IpRanges": [
                            {
                                "CidrIp": "0.0.0.0/0"
                            }
                        ], 
                        "UserIdGroupPairs": [], 
                        "Ipv6Ranges": []
                    }
                ], 
                "Description": "DeleteMeWhenWeAreDone", 
                "Tags": [
                    {
                        "Value": "tagdeletevalue", 
                        "Key": "tagdeletekey"
                    }
                ], 
                "IpPermissions": [], 
                "GroupName": "Test-SG7", 
                "VpcId": "vpc-d2d616b5", 
                "OwnerId": "644160558196", 
                "GroupId": "sg-a14a65dc"
            }, 
            {
                "IpPermissionsEgress": [
                    {
                        "IpProtocol": "-1", 
                        "PrefixListIds": [], 
                        "IpRanges": [
                            {
                                "CidrIp": "0.0.0.0/0"
                            }
                        ], 
                        "UserIdGroupPairs": [], 
                        "Ipv6Ranges": []
                    }
                ], 
                "Description": "launch-wizard-10 created 2017-03-23T10:53:38.739-04:00", 
                "IpPermissions": [
                    {
                        "PrefixListIds": [], 
                        "FromPort": 22, 
                        "IpRanges": [
                            {
                                "CidrIp": "0.0.0.0/0"
                            }
                        ], 
                        "ToPort": 22, 
                        "IpProtocol": "tcp", 
                        "UserIdGroupPairs": [], 
                        "Ipv6Ranges": []
                    }
                ], 
                "GroupName": "launch-wizard-10", 
                "VpcId": "vpc-d2d616b5", 
                "OwnerId": "644160558196", 
                "GroupId": "sg-b8dd6dc7"
            }, 
            {
                "IpPermissionsEgress": [
                    {
                        "IpProtocol": "-1", 
                        "PrefixListIds": [], 
                        "IpRanges": [
                            {
                                "CidrIp": "0.0.0.0/0"
                            }
                        ], 
                        "UserIdGroupPairs": [], 
                        "Ipv6Ranges": []
                    }
                ], 
                "Description": "default VPC security group", 
                "IpPermissions": [
                    {
                        "IpProtocol": "-1", 
                        "PrefixListIds": [], 
                        "IpRanges": [], 
                        "UserIdGroupPairs": [
                            {
                                "UserId": "644160558196", 
                                "GroupId": "sg-b9388dc8"
                            }
                        ], 
                        "Ipv6Ranges": []
                    }
                ], 
                "GroupName": "default", 
                "VpcId": "vpc-9ca119e5", 
                "OwnerId": "644160558196", 
                "GroupId": "sg-b9388dc8"
            }, 
            {
                "IpPermissionsEgress": [
                    {
                        "IpProtocol": "-1", 
                        "PrefixListIds": [], 
                        "IpRanges": [
                            {
                                "CidrIp": "0.0.0.0/0"
                            }
                        ], 
                        "UserIdGroupPairs": [], 
                        "Ipv6Ranges": []
                    }
                ], 
                "Description": "launch-wizard-8 created 2017-02-25T10:52:27.439-05:00", 
                "IpPermissions": [
                    {
                        "PrefixListIds": [], 
                        "FromPort": 22, 
                        "IpRanges": [
                            {
                                "CidrIp": "0.0.0.0/0"
                            }
                        ], 
                        "ToPort": 22, 
                        "IpProtocol": "tcp", 
                        "UserIdGroupPairs": [], 
                        "Ipv6Ranges": []
                    }
                ], 
                "GroupName": "launch-wizard-8", 
                "VpcId": "vpc-d2d616b5", 
                "OwnerId": "644160558196", 
                "GroupId": "sg-bdbfb7c1"
            }, 
            {
                "IpPermissionsEgress": [
                    {
                        "IpProtocol": "-1", 
                        "PrefixListIds": [], 
                        "IpRanges": [
                            {
                                "CidrIp": "0.0.0.0/0"
                            }
                        ], 
                        "UserIdGroupPairs": [], 
                        "Ipv6Ranges": []
                    }
                ], 
                "Description": "DeleteMeWhenWeAreDone", 
                "Tags": [
                    {
                        "Value": "tagdeletevalue", 
                        "Key": "tagdeletekey"
                    }
                ], 
                "IpPermissions": [], 
                "GroupName": "Test-SG6", 
                "VpcId": "vpc-d2d616b5", 
                "OwnerId": "644160558196", 
                "GroupId": "sg-bf4a65c2"
            }, 
            {
                "IpPermissionsEgress": [
                    {
                        "IpProtocol": "-1", 
                        "PrefixListIds": [], 
                        "IpRanges": [
                            {
                                "CidrIp": "0.0.0.0/0"
                            }
                        ], 
                        "UserIdGroupPairs": [], 
                        "Ipv6Ranges": []
                    }
                ], 
                "Description": "testing", 
                "IpPermissions": [
                    {
                        "PrefixListIds": [], 
                        "FromPort": 22, 
                        "IpRanges": [
                            {
                                "CidrIp": "0.0.0.0/0"
                            }
                        ], 
                        "ToPort": 22, 
                        "IpProtocol": "tcp", 
                        "UserIdGroupPairs": [], 
                        "Ipv6Ranges": []
                    }
                ], 
                "GroupName": "scot-test", 
                "VpcId": "vpc-d2d616b5", 
                "OwnerId": "644160558196", 
                "GroupId": "sg-c67c7dba"
            }, 
            {
                "IpPermissionsEgress": [
                    {
                        "IpProtocol": "-1", 
                        "PrefixListIds": [], 
                        "IpRanges": [
                            {
                                "CidrIp": "0.0.0.0/0"
                            }
                        ], 
                        "UserIdGroupPairs": [], 
                        "Ipv6Ranges": []
                    }
                ], 
                "Description": "Created from the RDS Management Console", 
                "IpPermissions": [
                    {
                        "PrefixListIds": [], 
                        "FromPort": 3306, 
                        "IpRanges": [
                            {
                                "CidrIp": "204.63.44.147/32"
                            }
                        ], 
                        "ToPort": 3306, 
                        "IpProtocol": "tcp", 
                        "UserIdGroupPairs": [], 
                        "Ipv6Ranges": []
                    }
                ], 
                "GroupName": "rds-launch-wizard", 
                "VpcId": "vpc-d2d616b5", 
                "OwnerId": "644160558196", 
                "GroupId": "sg-cd3d01b7"
            }, 
            {
                "IpPermissionsEgress": [
                    {
                        "IpProtocol": "-1", 
                        "PrefixListIds": [], 
                        "IpRanges": [
                            {
                                "CidrIp": "0.0.0.0/0"
                            }
                        ], 
                        "UserIdGroupPairs": [], 
                        "Ipv6Ranges": []
                    }
                ], 
                "Description": "launch-wizard-12 created 2017-03-26T10:49:51.089-04:00", 
                "IpPermissions": [
                    {
                        "PrefixListIds": [], 
                        "FromPort": 22, 
                        "IpRanges": [
                            {
                                "CidrIp": "0.0.0.0/0"
                            }
                        ], 
                        "ToPort": 22, 
                        "IpProtocol": "tcp", 
                        "UserIdGroupPairs": [], 
                        "Ipv6Ranges": []
                    }
                ], 
                "GroupName": "launch-wizard-12", 
                "VpcId": "vpc-d2d616b5", 
                "OwnerId": "644160558196", 
                "GroupId": "sg-d037b3af"
            }, 
            {
                "IpPermissionsEgress": [
                    {
                        "IpProtocol": "-1", 
                        "PrefixListIds": [], 
                        "IpRanges": [
                            {
                                "CidrIp": "0.0.0.0/0"
                            }
                        ], 
                        "UserIdGroupPairs": [], 
                        "Ipv6Ranges": []
                    }
                ], 
                "Description": "Created from the RDS Management Console", 
                "IpPermissions": [
                    {
                        "PrefixListIds": [], 
                        "FromPort": 3306, 
                        "IpRanges": [
                            {
                                "CidrIp": "172.14.148.19/32"
                            }
                        ], 
                        "ToPort": 3306, 
                        "IpProtocol": "tcp", 
                        "UserIdGroupPairs": [], 
                        "Ipv6Ranges": []
                    }
                ], 
                "GroupName": "rds-launch-wizard-3", 
                "VpcId": "vpc-d2d616b5", 
                "OwnerId": "644160558196", 
                "GroupId": "sg-d77ffba8"
            }, 
            {
                "IpPermissionsEgress": [
                    {
                        "IpProtocol": "-1", 
                        "PrefixListIds": [], 
                        "IpRanges": [
                            {
                                "CidrIp": "0.0.0.0/0"
                            }
                        ], 
                        "UserIdGroupPairs": [], 
                        "Ipv6Ranges": []
                    }
                ], 
                "Description": "launch-wizard-6 created 2017-02-23T23:10:17.875-05:00", 
                "IpPermissions": [
                    {
                        "PrefixListIds": [], 
                        "FromPort": 22, 
                        "IpRanges": [
                            {
                                "CidrIp": "0.0.0.0/0"
                            }
                        ], 
                        "ToPort": 22, 
                        "IpProtocol": "tcp", 
                        "UserIdGroupPairs": [], 
                        "Ipv6Ranges": []
                    }
                ], 
                "GroupName": "launch-wizard-6", 
                "VpcId": "vpc-d2d616b5", 
                "OwnerId": "644160558196", 
                "GroupId": "sg-dc1312a0"
            }, 
            {
                "IpPermissionsEgress": [
                    {
                        "IpProtocol": "-1", 
                        "PrefixListIds": [], 
                        "IpRanges": [
                            {
                                "CidrIp": "0.0.0.0/0"
                            }
                        ], 
                        "UserIdGroupPairs": [], 
                        "Ipv6Ranges": []
                    }
                ], 
                "Description": "AutoScaling-Security-Group-2 (2017-02-28 00:25:48.137-05:00)", 
                "IpPermissions": [
                    {
                        "PrefixListIds": [], 
                        "FromPort": 22, 
                        "IpRanges": [
                            {
                                "CidrIp": "0.0.0.0/0"
                            }
                        ], 
                        "ToPort": 22, 
                        "IpProtocol": "tcp", 
                        "UserIdGroupPairs": [], 
                        "Ipv6Ranges": []
                    }
                ], 
                "GroupName": "AutoScaling-Security-Group-2", 
                "VpcId": "vpc-d2d616b5", 
                "OwnerId": "644160558196", 
                "GroupId": "sg-deafbda2"
            }, 
            {
                "IpPermissionsEgress": [
                    {
                        "IpProtocol": "-1", 
                        "PrefixListIds": [], 
                        "IpRanges": [
                            {
                                "CidrIp": "0.0.0.0/0"
                            }
                        ], 
                        "UserIdGroupPairs": [], 
                        "Ipv6Ranges": []
                    }
                ], 
                "Description": "launch-wizard-2 created 2017-01-06T22:30:02.993-05:00", 
                "IpPermissions": [
                    {
                        "PrefixListIds": [], 
                        "FromPort": 22, 
                        "IpRanges": [
                            {
                                "CidrIp": "0.0.0.0/0"
                            }
                        ], 
                        "ToPort": 22, 
                        "IpProtocol": "tcp", 
                        "UserIdGroupPairs": [], 
                        "Ipv6Ranges": []
                    }
                ], 
                "GroupName": "launch-wizard-2", 
                "VpcId": "vpc-d2d616b5", 
                "OwnerId": "644160558196", 
                "GroupId": "sg-e281699e"
            }, 
            {
                "IpPermissionsEgress": [
                    {
                        "IpProtocol": "-1", 
                        "PrefixListIds": [], 
                        "IpRanges": [
                            {
                                "CidrIp": "0.0.0.0/0"
                            }
                        ], 
                        "UserIdGroupPairs": [], 
                        "Ipv6Ranges": []
                    }
                ], 
                "Description": "Created from the RDS Management Console", 
                "IpPermissions": [
                    {
                        "PrefixListIds": [], 
                        "FromPort": 3306, 
                        "IpRanges": [
                            {
                                "CidrIp": "172.14.148.19/32"
                            }
                        ], 
                        "ToPort": 3306, 
                        "IpProtocol": "tcp", 
                        "UserIdGroupPairs": [], 
                        "Ipv6Ranges": []
                    }
                ], 
                "GroupName": "rds-launch-wizard-5", 
                "VpcId": "vpc-d2d616b5", 
                "OwnerId": "644160558196", 
                "GroupId": "sg-e6d44399"
            }, 
            {
                "IpPermissionsEgress": [
                    {
                        "IpProtocol": "-1", 
                        "PrefixListIds": [], 
                        "IpRanges": [
                            {
                                "CidrIp": "0.0.0.0/0"
                            }
                        ], 
                        "UserIdGroupPairs": [], 
                        "Ipv6Ranges": []
                    }
                ], 
                "Description": "launch-wizard-15 created 2017-04-02T21:33:45.655-04:00", 
                "IpPermissions": [
                    {
                        "PrefixListIds": [], 
                        "FromPort": 22, 
                        "IpRanges": [
                            {
                                "CidrIp": "0.0.0.0/0"
                            }
                        ], 
                        "ToPort": 22, 
                        "IpProtocol": "tcp", 
                        "UserIdGroupPairs": [], 
                        "Ipv6Ranges": []
                    }
                ], 
                "GroupName": "launch-wizard-15", 
                "VpcId": "vpc-d2d616b5", 
                "OwnerId": "644160558196", 
                "GroupId": "sg-f7117688"
            }, 
            {
                "IpPermissionsEgress": [
                    {
                        "IpProtocol": "-1", 
                        "PrefixListIds": [], 
                        "IpRanges": [
                            {
                                "CidrIp": "0.0.0.0/0"
                            }
                        ], 
                        "UserIdGroupPairs": [], 
                        "Ipv6Ranges": []
                    }
                ], 
                "Description": "Has a NetworkLocation:Public tag key-value pair", 
                "Tags": [
                    {
                        "Value": "FancyTestGroupPublic", 
                        "Key": "Name"
                    }, 
                    {
                        "Value": "Public", 
                        "Key": "NetworkLocation"
                    }
                ], 
                "IpPermissions": [
                    {
                        "PrefixListIds": [], 
                        "FromPort": 0, 
                        "IpRanges": [
                            {
                                "CidrIp": "169.254.169.254/32"
                            }
                        ], 
                        "ToPort": 65535, 
                        "IpProtocol": "tcp", 
                        "UserIdGroupPairs": [], 
                        "Ipv6Ranges": []
                    }
                ], 
                "GroupName": "FancyTestGroupPublic", 
                "VpcId": "vpc-f1516b97", 
                "OwnerId": "644160558196", 
                "GroupId": "sg-f8c78787"
            }, 
            {
                "IpPermissionsEgress": [
                    {
                        "IpProtocol": "-1", 
                        "PrefixListIds": [], 
                        "IpRanges": [
                            {
                                "CidrIp": "0.0.0.0/0"
                            }
                        ], 
                        "UserIdGroupPairs": [], 
                        "Ipv6Ranges": []
                    }
                ], 
                "Description": "launch-wizard-14 created 2017-03-28T10:55:21.637-04:00", 
                "IpPermissions": [
                    {
                        "PrefixListIds": [], 
                        "FromPort": 22, 
                        "IpRanges": [
                            {
                                "CidrIp": "0.0.0.0/0"
                            }
                        ], 
                        "ToPort": 22, 
                        "IpProtocol": "tcp", 
                        "UserIdGroupPairs": [], 
                        "Ipv6Ranges": []
                    }
                ], 
                "GroupName": "launch-wizard-14", 
                "VpcId": "vpc-d2d616b5", 
                "OwnerId": "644160558196", 
                "GroupId": "sg-fc46c983"
            }, 
            {
                "IpPermissionsEgress": [
                    {
                        "IpProtocol": "-1", 
                        "PrefixListIds": [], 
                        "IpRanges": [
                            {
                                "CidrIp": "0.0.0.0/0"
                            }
                        ], 
                        "UserIdGroupPairs": [], 
                        "Ipv6Ranges": []
                    }
                ], 
                "Description": "DeleteMeWhenWeAreDone", 
                "Tags": [
                    {
                        "Value": "tagdeletevalue", 
                        "Key": "tagdeletekey"
                    }
                ], 
                "IpPermissions": [], 
                "GroupName": "Test-SG5", 
                "VpcId": "vpc-d2d616b5", 
                "OwnerId": "644160558196", 
                "GroupId": "sg-ff4a6582"
            }
        ], 
        "ResponseMetadata": {
            "RetryAttempts": 0, 
            "HTTPStatusCode": 200, 
            "RequestId": "78d5d5a0-fd8b-4b1a-8846-48302f9fb601", 
            "HTTPHeaders": {
                "transfer-encoding": "chunked", 
                "vary": "Accept-Encoding", 
                "server": "AmazonEC2", 
                "content-type": "text/xml;charset=UTF-8", 
                "date": "Tue, 27 Jun 2017 17:51:00 GMT"
            }
        }
    }
}
